# elm-haskell-scaffold

./: .gitignore  README.md  circle.yml  deploy.sh  docker-compose.yml
back-end/: Dockerfile  README.md  docker-entrypoint.sh  project.cabal  stack.yaml
back-end/src/: Lib.hs
back-end/src/Api/: User.hs
db/: Dockerfile  README.md
db/tables/: table-ddl.sql
front-end/: README.md  elm-package.json  package.json  webpack.config.js
front-end/config/: webpack.common.js  webpack.dev.js  webpack.prod.js
front-end/src/: Main.elm  Ports.elm  State.elm  Types.elm  View.elm  gqlClient.js  index.html  index.js  main.css
front-end/src/Client/Login/: Login.elm
front-end/src/Client/Pages/Home/: Home.elm
front-end/src/Server/API/Queries/: Authentication.elm
front-end/src/Server/Config/: APIServer.elm
