name:                project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:
license:             BSD3
license-file:        LICENSE
author:              Steven MacCoun
maintainer:          theraccoun@gmail.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , App
                     , Api.User
                     , Models.User
                     , Queries.User
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server == 0.8
                     , wai
                     , warp
                     , datetime
                     , opaleye
                     , product-profunctors
                     , bytestring
                     , postgresql-simple
                     , transformers
                     , pwstore-fast
                     , resource-pool
                     , wai-extra
                     , fast-logger
                     , data-default-class
                     , text
  default-language:    Haskell2010

executable project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , project
  default-language:    Haskell2010

test-suite project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , project
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


